Resolved defect #697537 where the gift card line on the checkout review table was not aligned correctly

--- a/webroot/skin/frontend/blueacorn/mis/css/styles-checkout.css
+++ b/webroot/skin/frontend/blueacorn/mis/css/styles-checkout.css
@@ -501,6 +501,12 @@ body:not(.opc-has-progressed-from-login) .opc.opc-firststep-login .section#opc-l
   .opc .select-container {
     width: auto; } }
 
+@media only screen and (max-width: 479px) {
+  .checkout-review-table th.a-right {
+    float: left;
+    width: 60%;
+    white-space: normal; } }
+
 /* ============================================ *
  * Checkout - Success
  * ============================================ */
